crates/toml/tests/snapshots/invalid/key/start-dot.stderr
TOML parse error at line 1, column 1
  |
1 | .key = 1
  | ^
unquoted keys cannot be empty, expected letters, numbers, `-`, `_`
